# shell_simulation

./: CMakeLists.txt  package.xml  requirements.txt  setup.py
include/shell_simulation/: example_publisher.h
launch/: shell_simulation.launch
src/: example_publisher.cpp  ros_control  save_waypoints  shell_control  shell_simulation_node.cpp  shell_waypoints.txt
src/control/: controller2d.py  test.py
src/control/controller_output/: trajectory.txt
src/control/waypoints/: shell_waypoints.txt  shell_waypoints_almost.txt  shell_waypoints_circle.txt
